update download & upload api docs
